# eitoolkit

./: .gitignore  CMakeLists.txt  EIToolkitConfig.cmake  EIToolkitConfig.cmake.in  EIToolkitConfigVersion.cmake.in  INSTALL
cmake/: CMakeCSharpInformation.cmake  CMakeDetermineCSharpCompiler.cmake  EnableCXX11.cmake  EnableWarnings.cmake  GenerateExportHeader.cmake
doc/: CMakeLists.txt  Doxyfile.in
doc/examples/cpp-cmake/: CMakeLists.txt  example.cpp
doc/examples/csharp/: EI-CSharp.sln
doc/examples/csharp-vc10/count/: Program.cs
doc/examples/csharp-vc10/push/: Program.cs
doc/examples/csharp-vc10/push/Properties/: AssemblyInfo.cs
doc/examples/csharp/count/: Program.cs  count.csproj
doc/examples/csharp/count/Properties/: AssemblyInfo.cs
doc/examples/csharp/push/: Program.cs  push.csproj
doc/examples/java-idea/src/: count.java  push.java
examples/: CMakeLists.txt  combined.cpp  count.cpp  discrete_sender.cpp  generic_receiver.cpp  push.cpp  server.cpp  simple_receiver.cpp  simple_server.cpp  sinus_sender.cpp  slow_discrete_sender.cpp
json_spirit/: CMakeLists.txt
rapidjson/: allocators.h  document.h  writer.h
tests/: CMakeLists.txt  benchmark.cpp  combined.cpp  count.cpp  simple_receiver.cpp  sinus_sender.cpp  sinus_sender_fast.cpp
